# docs-couchbase-lite

./: .gitignore  Jenkinsfile  LICENSE  README.adoc  antora-h2BetaAndroid.yml  antora-h2BetaCsharp.yml  antora-h2BetaIOS.yml  antora-h2stage.yml  antora.yml  package-lock.json  prepareSnippets.sh  rollforward-commits-2.6-to-2.7  simplify  teja.2file
.github/workflows/: xcodebuild.yml
jenkins/: c_build.sh  dotnet_build.sh  ios.sh
modules/: RelNoteIssues_C.adoc  nav.adoc
modules/ROOT/: nav copy.adoc  nav-javascript.adoc  nav-prod-notes.adoc  nav-sync-gateway.adoc  nav.adoc
modules/android/: .gitignore  build_snippets.sh  index.adoc  nav-android copy.adoc  nav-android.adoc  snippet_collection.java  snippet_collection.kt
modules/c/: nav-c.adoc
modules/c/examples/code_snippets/: CMakeLists.txt  VectorSearch.h  main.c  main.cpp  p2preplication.c
modules/clang/: nav-clang.adoc
modules/csharp/: nav-csharp.adoc
modules/java/: .gitignore  build_snippets.sh  nav-java.adoc
scripts/: attrs  subs
simplify/: antora-assembler.yml  attributes.pl  mobile.yml  rename.sh  simplify.sh
temp-bin/: SampeCodeTest_extract270721.swift  caption.adoc  common-query-resultsets copy.adoc  common-sgw-server-authentication.adoc  database-replicas.adoc  document-batch-ops.adoc  document-change-events.adoc  document.adoc  dotnet-ref-api.adoc  nav-skeleton copy 2.adoc  nav-skeleton copy 3.adoc  nav-skeleton-minimal.adoc  nav-skeleton-quickstart-hack.adoc  p2p-api-tlsid-net.adoc  p2p-connection-teardown.adoc  p2p-peer-discovery-ws.adoc  ref-api.adoc  swift-ref-api.adoc
(+1596 files in other folders)
